# node-based-modeling-tool-opengl

./: .gitignore  LICENSE  README.md  node-based-modeling-opengl.sln
node-based-modeling-opengl/: .json  CMakeLists.txt  glad.c  imgui.ini  main.cpp  node-based-modeling-opengl.filters  node-based-modeling-opengl.vcxproj
node-based-modeling-opengl/Dependencies/include/: Node.cpp  Node.h  Node_func.h  Node_generate_object.h  Node_simulation.h  Node_template.h  Object_setting.h  animation.h  camera.h  debug.cpp  debug.h  framemanager.cpp  framemanager.h  imgui_func.h  inputctrl.h  mesh.h  model.cpp  model.h  model_func.h  mymath.cpp  mymath.h  object.h  opt.h  scenectrl.h  shader.h  show_display.h  utility_func.h  window.h
node-based-modeling-opengl/example_node/: chain.json
node-based-modeling-opengl/lib/: assimp-vc143-mtd.lib  nlopt.lib
node-based-modeling-opengl/resources/objects/: axis.mtl  imgui.ini  ui_sphere.mtl
node-based-modeling-opengl/shader/: UIshader.vs  UIshader_blue.fs  UIshader_blue.vs  instancing.fs  instancing.vs  instancing_texture.vs  light.fs  shapematchingshader.fs  shapematchingshader.vs  skin_animation.vs  transparent.fs
